Window config from game